Tue Apr 27 12:12:01 BST 2004  Richard Boulton <richard@tartarus.org>

        * docs/: Beginnings of documentation.  Written in halibut, but
          for now I'll commit the generated .txt version as well.

Tue Apr 27 10:20:13 BST 2004  Richard Boulton <richard@tartarus.org>

        * configure.ac: Add checks for ssize_t and socklen_t.
        * acinclude.m4: New file - causes macro for checking for socklen_t
          to be included from xapian-core.

Mon Apr 26 23:57:15 BST 2004  Richard Boulton <richard@tartarus.org>

        * Makefile.am: Add clients/index.php to dist.

Mon Apr 26 23:22:58 BST 2004  Richard Boulton <richard@tartarus.org>

        * clients/index.php: Add example PHP page using
          xapian-queryclient.php.
        * clients/xapian-queryclient.php: Add $socket parameter to
          Enquiry() constructor, to allow location of socket to be
          configurable.  Fix bug when building request if no query is
          specified.

Fri Apr 23 19:27:52 BST 2004  Richard Boulton <richard.boulton@omsee.com>

	* (xapian-queryclient.php, xapian-queryserver.txt): Add to dist.

Fri Apr 23 19:14:34 BST 2004  Richard Boulton <richard.boulton@omsee.com>

	* Rename queryclient.php to xapian-queryclient.php, and add it to
	  Makefile.am
	* Install xapian-queryserver in $(exeprefix)/bin

Fri Apr 23 18:18:04 BST 2004  Richard Boulton <richard.boulton@omsee.com>

	* Fix to compile with gcc-2.95

Thu Apr 22 10:27:37 BST 2004  Richard Boulton <richard@tartarus.org>

        * Initial import.  Basically works, but not yet documented or
          properly tested.
